    - Adapted the required and optional fields of entry types according to
      http://en.wikipedia.org/wiki/BibTeX#Entry_types
    - After a search has been done, the first entry of the entry table is selected (feature 656).
    - Entries contained in an .aux file can now be selected (feature 644).
    - Number of entries in a group is now displayed in brackets (patch 124).
    - New entries are now always be added to a group. Fixes bug 1093.
    - Configurable: Timestamp is now automatically updated on a change of an entry (feature 799)
    - Re-enabled customization of shortcut keys
    - Changed serialization of BibTeX entries:
      * First, the required, then the optional and then all other fields are written.
        Thereby, fields are now ordered by name. Except the title, which is written first.
      * The second word in of the BibTeX type is capitalized. E.g., Inproceedings got InProceedings
      * Configurable: Start field contents in same column. Enabled by default.
      * Configurable: Use camel case for field names (e.g., "HowPublished" instead of "howpublished"). Enabled by default.
      * If no field name is given, then "UNKNOWN" is used. For instance, " = {X}" gets " UNKNOWN = {X}".
    - Saving a part of the database now also writes entries with a crossref field first.
    - Author field is now resolved using @String data.
    - A custom proxy can be specified (patch 198 by Michael).
    - Default key binding for Write XMP is now "CTRL+F7" instead of "CTRL+F4"
      as the latter conflicts with "Synchronize files" (by Adrian Daerr)
    - WriteXMPAction now uses database to resolve strings even for selected entries (by Adrian Daerr)
    - Extend XMP privacy filtering to Dublin Core Schema (by Adrian Daerr)
    - IEEE search should include author field again (patch 201 by Christopher S. Lester, fixes bug 1137)
2.9.2
    - Fixed handling of empty author parts in rare cases. Fixes bug 1124.