@@ -2391,3 +2391,5 @@ Clear_connection_settings=Clear_connection_settings
 Cleared_connection_settings.=Cleared_connection_settings.
 
 Rebind_C-a,_too=Rebind_C-a,_too
+
+Show_number_of_elements_contained_in_each_group=Show_number_of_elements_contained_in_each_group
