@@ -1586,3 +1586,5 @@ Rebind_C-a,_too=
 Search_specified_field(s)=
 Unselect_all=
 Waiting_for_save_operation_to_finish=
+
+Show_number_of_elements_contained_in_each_group=
