@@ -1587,3 +1587,5 @@ Use_custom_proxy_configuration=Utiliser_une_configuration_de_proxy_personnalis\u
 Clear_connection_settings=R\u00e9initialiser_les_param\u00e8tres_de_connexion
 Cleared_connection_settings.=Param\u00e8tres_de_connexion_r\u00e9initialis\u00e9s.
 Rebind_C-a,_too=
+
+Show_number_of_elements_contained_in_each_group=
