@@ -2392,3 +2392,5 @@ Use_custom_proxy_configuration=
 Clear_connection_settings=
 Cleared_connection_settings.=
 Rebind_C-a,_too=
+
+Show_number_of_elements_contained_in_each_group=
