@@ -2384,3 +2384,5 @@ Use_camel_case_for_field_names_(e.g.,_"HowPublished"_instead_of_"howpublished")=
 Use_custom_proxy_configuration=
 You_have_to_choose_exactly_two_entries_to_merge.=
 change_field=
+
+Show_number_of_elements_contained_in_each_group=
