@@ -1577,3 +1577,5 @@ Save_entries_ordered_by_title=
 Start_field_contents_in_same_column=
 Use_camel_case_for_field_names_(e.g.,_"HowPublished"_instead_of_"howpublished")=
 Use_custom_proxy_configuration=
+
+Show_number_of_elements_contained_in_each_group=
