@@ -2380,3 +2380,5 @@ Clear_connection_settings=
 Cleared_connection_settings.=
 
 Rebind_C-a,_too=
+
+Show_number_of_elements_contained_in_each_group=
